logs/launcher_stderr_20251113_214103.txt
  File "D:\GM\tools\2_Landmarking_v1.0\scripts\..\annot_gui_custom.py", line 650
    return True    def toggle_qc(self, *_):
                   ^^^
SyntaxError: invalid syntax

